# sello

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  package.json
.github/workflows/: ci.yml  release.yml
docs/: a2a.md  decisions.md  mcp.md  performance.md  protocol-walkthrough.md  release-checklist.md  sdk-quickstart.md  sdk-security-audit.md  security-review.md
docs/paper/: notarized-agents.md  notarized-agents.tex  refs.bib
examples/: mcp-minimal-server.ts
fixtures/vectors/: sello-v0.1.json
python/: README.md
python/src/sello/: _crypto.py  (+4 more)
python/tests/: test_service.py
scripts/: build-dist.mjs  package-smoke.mjs
sdks/: README.md
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: quickstart_tool.py
sdks/python/src/sello/: __init__.py  keys.py
sdks/python/tests/: test_service.py
src/: cbor.ts  index.ts
src/cli/: bench.ts  demo.ts  sello.ts
src/cose/: protected-header.ts  sign1.ts
src/crypto/: identifiers.ts
src/hpke/: receipt.ts
src/log/: canonical-url.ts  mock-log.ts  rekor.ts  types.ts
src/mcp/: middleware.ts
src/owner/: verify.ts
src/registry/: json-registry.ts
src/sdk/: index.ts  publisher.ts
src/service/: create-receipt.ts
src/token/: jws-profile.ts
test/: cbor.test.ts  index.test.ts
test/cli/: bench.test.ts  sello.test.ts
test/examples/: mcp-tool-server.test.ts
test/hpke/: receipt.test.ts
test/log/: rekor.test.ts
test/owner/: verify.test.ts
test/registry/: json-registry.test.ts
test/service/: create-receipt.test.ts
test/token/: jws-profile.test.ts
(+42 files in other folders)
