[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sello"
version = "0.1.11"
description = "Python SDK for Sello service-signed AI agent receipts."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Sello contributors" }]
dependencies = [
  "cbor2>=5.6",
  "cryptography>=42",
]

[project.urls]
Homepage = "https://github.com/juanfiguera/sello"
Protocol = "https://github.com/juanfiguera/sello/blob/main/SPEC.md"

[tool.setuptools.packages.find]
where = ["src"]
